# hosseins-project

./: .gitignore  README.md  SCRAPER_OUTPUT_SUMMARY.md  ULTIMATE_FEATURES.md  consolidated_opportunities.xlsx  emma_scraper_consolidated.py  emma_scraper_enhanced.py  emma_scraper_fixed.py  emma_scraper_ultimate.py  fixed_opportunities.xlsx  main-code.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_emma_scraper.py  test_opportunities.xlsx
documentations/: main-code.md
streamlit_app/: ENHANCEMENTS.md  README.md  app.py  requirements.txt
tests/: conftest.py  test_date_parsing.py  test_scraping.py
tests/fixtures/: emma_reordered_columns.html
